Add a bit more about Eliza's life

--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -31,14 +31,33 @@ Gloger (2007) states that in the case of Poland, Positivism played a similar rol
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna, north of the Niemen river, in present-day Belarus, to a family of gentry.
 Her father, Benedykt Pawłowski, died when she was three years old. 
-At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament, where she learned French and German, and explored Polish literature.
-In 1858, at the age of 17, her parents arranged her marriage with Piotr Orzeszko, a wealthy landowner.
-At the day of their wedding, the bridegroom was 35 years old.
-The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests---Eliza was highly pro-independence and sought the emancipation of serfs (Britannica, Bachórz, Brykowisko 2011).
+At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school, run by the nuns of the Order of the Holy Sacrament.
+During that period, she had studied French, German, and Polish literature.
+
+In 1858, at the age of 17, her parents arranged her marriage with a wealthy landowner by the name of Piotr Orzeszko.
+In her diaries, Eliza admits her fondness for the tall, blond, and handsome man, and was excited to leave her family home to explore the world.
+At the day of their wedding, the bridegroom was 35 years old
+(Shastouski).
+
+
+The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests and affiliations---Eliza was highly pro-independence and sought the emancipation of serfs.
+Her husband, on the other hand, as a member of the bourgeoisie, was more inclined to protect the interests of his class, which saw the political turmoil brought about by military activities as an opportunity to further accumulate wealth
+(Britannica, Bachórz, Brykowisko, 2011, Orzeszkowa, 2000, p. 7).
+
+% In 1864, serfdom was effectively abolished in the Russian partition --- peasants were allowed to own their land.
 
 During the January Uprising, Eliza was actively working for the Polish cause, passing messages between the troops, and even helping Mr. Romuald Traugutt, the leader of the insurrection from October 1863 up to its end in August 1864, by hiding him in her house and escorting him to the border of Congress Poland.
-In December 1864, Mr. Orzeszko was arrested and sent to Russia.
-(Brykowisko 2011).
+Following the failed uprising, in December 1864, Mr. Orzeszko was arrested and sent to Russia.
+(Brykowisko, 2011).
+
+Eliza has thus described her impressions from returning to her hometown:
+
+\longquote{%
+  I went out to the world in a carriage padded with blue damask and drawn by seven horses. I was accompanied by servants shining with coat of arms plaques\ldots{} At the age of twenty, I returned from those distant places all alone, to the house I have inherited from my father, only to find it looted by soldiers who had stayed in the household; [I had to pay] debts taken by other people and a tribute % kontrybucja
+so enormous that even [our] fields of wheat would bend under its burden; various officials would frequently visit and overstay\ldots{} The situation was completely overwhelming\ldots{}%
+\footnote{Orzeszkowa, 2000, pp. 7--8.}}
+
+Eliza debuted as a writer in 1866, with the novel \textit{Obrazek z lat głodowych} (`A Picture from the Years of Famine'), dealing with the daily struggles of the lower layers of society.
 
 In 1869, her marriage was annulled and she settled in Grodno (present day Hrodna, Belarus).
 Since 1879, she co-owned a publishing house and bookstore in Vilnius, in present-day Lithuania.
@@ -62,7 +81,7 @@ Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalsk
 In Zamenhof's translation of \textit{Marta}, the author's name is listed as Eliza Orzeszko.
 Zhong Xianmin's translation follows this convention, rendering the name into Chinese with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
 Other Chinese-language writings and websites use other variations, based on the traditional form ``Eliza Orzeszkowa.''
-These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the most prevalent form in Polish-language writings.
+These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the form ``Eliza Orzeszkowa'' shall be used, being the most prevalent in Polish-language writings.
 
 \section{Plot outline of the novel \textit{Marta}}
 The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
