--- a/esperanto.tex
+++ b/esperanto.tex
@@ -17,8 +17,8 @@ Ever since his early childhood, he had had a vision of a single language that co
 The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood.
 He considered his native languages to be Yiddish and Russian.
 As a young boy, he had dreamt of becoming a great Russian poet, and at the age of ten, he wrote a five-act tragedy in Russian.
-In 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
-In 1873 he moved with his parents to Warsaw (Polish: Warszawa \ipa{[varˈʂava]}, present-day capital of Poland), where he studied Latin and Ancient Greek, after which he enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
+In 1870, he enrolled at a gymnasium in Białystok, which he attended for nine years.
+In 1873, he moved with his parents to Warsaw (Polish: Warszawa \ipa{[varˈʂava]}, present-day capital of Poland), where he studied Latin and Ancient Greek, after which he enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
 He graduated in 1879 and moved to Moscow to attend the faculty of medicine.
 In 1881, due to the poor financial situation of his family, he was compelled to move back to Warsaw, where he obtained his medical degree in 1885.
 After a period of medical practice he realized that he was too sympathetic for his patients, that their suffering and death affected him too much.
