--- a/indexed.tex
+++ b/indexed.tex
@@ -2,25 +2,25 @@
 \defspacing
 
 \section{Research topic and objectives}
-The purpose of this thesis is to discuss the 1873 novel \textit{Marta\index{Marta}}, written by the Polish\index{Polish} writer Eliza Orzeszkowa\index{Orzeszkowa, Eliza} (1841-1910), as well as its translations into Esperanto\index{Esperanto} and the indirect translation from Esperanto into Chinese\index{Chinese}.
-The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
+The purpose of this thesis is to discuss the 1873 novel \textit{Marta\index{Marta}}, written by the Polish\index{Polish} writer Eliza Orzeszkowa\index{Orzeszkowa, Eliza} (1841-1910), as well as two of its translations: a direct translation from Polish into Esperanto\index{Esperanto} and an indirect translation from Esperanto into Chinese\index{Chinese}.
+The goal of the research is to find similarities and differences between all three versions.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as a bridge language\index{bridge language}.
 This way, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language.
 
 \section{Overview of literature and references}
 In the thesis, three editions of the novel \textit{Marta\index{Marta}} are discussed, in three different languages: Polish\index{Polish}, Esperanto\index{Esperanto}, and Chinese\index{Chinese}.
 The novel was first published in Polish in 1873.
-Ludwik Zamenhof\index{Zamenhof, Ludwik Lejzer}, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and it was first published in Esperanto in 1910.
+Ludwik Zamenhof\index{Zamenhof, Ludwik Lejzer}, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and his translation was first published in 1910.
 The Chinese version was translated in May 1928 by Zhong Xianmin\index{Zhong Xianmin 鍾憲民} (鍾憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
 from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko\index{Orzeszkowa, Eliza} 1948).
 
-As of this writing, none of the translations is easily available in retail or in libraries, therefore for research purposes, digitalised versions will be used.
-The Esperanto\index{Esperanto} translation has been published to several websites of Esperanto associations and in general, it is relatively easy to obtain.
+As of this writing, none of the translations is easily available in retail or in libraries, therefore for the purposes of this research, digitalised versions will be used.
+The Esperanto\index{Esperanto} translation has been published on the websites of several Esperanto associations and in general, it is relatively easy to obtain.
 The Chinese\index{Chinese} edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
 The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
-The title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
+It is not entirely clear where the Chinese edition had been published, as the title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
 
 \section{Existing publications on the topic}
 Benczik (1979) published an article on the topic of translation from and into Esperanto\index{Esperanto} in Asia.
@@ -52,14 +52,14 @@ By Western linguistic standards, these varieties of the language cannot be consi
 
 Despite the vast differences between topolect\index{topolect}s, the writing system has largely been uniform throughout China\index{China}, and has also been used in international correspondence between various countries of the Sinitic cultural circle\index{Sinitic cultural circle}, particularly in Japan\index{Japan}, Korea\index{Korea}, and Vietnam\index{Vietnam}.
 In Chinese\index{Chinese}, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English\index{English language} as ``classical Chinese\index{literary Chinese 文言文}'' or ``literary Chinese\index{literary Chinese 文言文}.''
-The language had undergone very little change between the Han dynasty (漢朝 \pinyin{Hàncháo}, 206 BC-220 AD) and the 20th century, when it was largely replaced by written vernacular Chinese (白話文 \pinyin{báihuàwén}).
+The language had undergone very little change between the Han dynasty (漢朝 \pinyin{Hàncháo}, 206 BC-220 AD) and the 20th century, when it was largely superseded by written vernacular Chinese (白話文 \pinyin{báihuàwén}), a variety much more similar to the spoken language.
 A substantial part of cultural references, vocabulary, and idiomatic expressions has been preserved from the literary language.
 % A corpus of ancient text and Confucian classics written in this language has for many centuries formed the basis of a system of formal education and imperial examinations for civil servants, which had not been abolished until as late as 1905.
 Many idiomatic expressions originating from classical texts, the so-called \textit{chengyu} (成語 \pinyin{chéngyǔ}), are commonly used to precisely convey emotions and moral concepts, or as set phrases in formal correspondence.
 The knowledge of various \textit{chengyu} is considered to be an indicator of one's erudition, and the use of these expressions is an important differentiating factor between colloquial Chinese and its written counterpart.
 
 Zhong Xianmin, who translated the novel \textit{Marta\index{Marta}} did so based only on the Esperanto\index{Esperanto} edition, without any knowledge of the Polish\index{Polish} language.
-Due to these specifics of written Chinese\index{Chinese}, certain differences are to be expected between the Chinese translation and the Polish original.
+Due to the aforementioned specifics of written Chinese\index{Chinese}, certain differences are to be expected between the Chinese translation and the Polish original.
 Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin\index{Zhong Xianmin 鍾憲民}'s work.
 
 \section{Structure of the thesis}
@@ -88,6 +88,7 @@ Ever since his early childhood, he had had a vision of a single language that co
 (Zamenhof 1904, Ziółkowska 2008: 3).
 
 The father and grandfather of Ludwik Zamenhof\index{Zamenhof, Ludwik Lejzer} had been language teachers, and Ludwik himself had a deep interest for languages since early childhood.
+He considered his native language\index{native language}s to be Yiddish\index{Yiddish} and Russian.
 As a young boy, he had dreamt of becoming a great Russian poet, and at the age of ten, he wrote a five-act tragedy in Russian.
 In 1870 he enrolled at a gymnasium in Białystok\index{Białystok}, which he attended for nine years.
 In 1873 he moved with his parents to Warsaw\index{Warsaw} (Polish\index{Polish}: Warszawa \ipa{[varˈʂava]}, present-day capital of Poland\index{Poland}), where he studied Latin\index{Latin language} and Ancient Greek\index{Ancient Greek language}, after which he enrolled at the Philological Gymnasium\index{Philological Gymnasium}, a high school with a particular emphasis on the study of languages.
@@ -104,8 +105,7 @@ the suffix\index{suffix} \textit{-anto} indicating the gerund form, analogous to
 The language authored by Zamenhof\index{Zamenhof, Ludwik Lejzer} was first described in a book published in the Russian language in 1887 in Warsaw\index{Warsaw}.
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
 (Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ `The International Language. Introduction and Complete Textbook').
-This book has subsequently been translated into English\index{English language}, %and published as \textit{Dr.~Esperanto's International Language, Introduction and Complete Grammar}
-Polish\index{Polish}, German\index{German language}, and French\index{French language}.
+This book has subsequently been translated into English\index{English language}, Polish\index{Polish}, German\index{German language}, and French\index{French language}.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language\index{auxilliary language} that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language\index{native language} and the proposed bridge language\index{bridge language}, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language.
@@ -140,7 +140,7 @@ All parts of speech are perfectly regular, with ingeniously simple conjugations 
 For instance, the verb ``to be'' is \textit{esti} in its dictionary, infinitive form.
 The present tense for all persons is \textit{estas}, the past tense---\textit{estis}, the future tense---\textit{estos}, and the conditional form---\textit{estus}.
 Unlike in the case of ethnic language\index{ethnic language}s in which mastering the verb system under normal conditions could take weeks (conditionals in German), all necessary rules of Esperanto can be described in two sentences.
-All verbs in the languague follow the same pattern.
+All verbs in the language follow the same pattern.
 There are only two cases, nominative\index{nominative case} and accusative\index{accusative case}, which is just enough to tell the subject of a sentence from the object.
 The accusative is indicated by the suffix\index{suffix} \textit{-n}.
 For example, in the sentence \textit{Li loĝas en granda domo.} (`He lives in a big house.'), \textit{granda domo} (a big house) is used in nominative.
