--- a/references.tex
+++ b/references.tex
@@ -36,12 +36,18 @@ Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key S
 
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
 
-Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
+Orzeszkowa, E. (2001). \textit{Marta}. L. L. Zamenhof (Trans.). Tyresö: Inko.
+
+% Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
 % https://www.rulit.me/books/marta-read-366296-1.html
+
+Orzeszkowa E. (2000). \textit{Marta}. Gdańsk, Poland: Tower Press.
 
 Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf} on March 7th, 2020.
 
 % Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved March 7th, 2020.
+
+Shastouski, K. \textit{Piotr i Eliza.} Retrieved November 21st, 2020, from \url{https://radzima.org/pl/person/474.html}.
 
 Sikosek, Z. M. (2003). \textit{Esperanto sen mitoj.} Antwerp, Belgium: Flandra Esperanto-Ligo. 
 
