Expand the biography of Eliza

--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -35,10 +35,9 @@ At the age of ten, she moved to Warsaw, the present-day capital of Poland, where
 During that period, she had studied French, German, and Polish literature.
 
 In 1858, at the age of 17, her parents arranged her marriage with a wealthy landowner by the name of Piotr Orzeszko.
-In her diaries, Eliza admits her fondness for the tall, blond, and handsome man, and was excited to leave her family home to explore the world.
+In her diaries, Eliza admits her fondness for the tall, blond, and handsome man, and was excited to leave her family home to explore the country and to visit the man's numerous relatives, living in different parts of the Russian empire.
 At the day of their wedding, the bridegroom was 35 years old
 (Shastouski).
-
 
 The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests and affiliations---Eliza was highly pro-independence and sought the emancipation of serfs.
 Her husband, on the other hand, as a member of the bourgeoisie, was more inclined to protect the interests of his class, which saw the political turmoil brought about by military activities as an opportunity to further accumulate wealth
@@ -47,17 +46,25 @@ Her husband, on the other hand, as a member of the bourgeoisie, was more incline
 % In 1864, serfdom was effectively abolished in the Russian partition --- peasants were allowed to own their land.
 
 During the January Uprising, Eliza was actively working for the Polish cause, passing messages between the troops, and even helping Mr. Romuald Traugutt, the leader of the insurrection from October 1863 up to its end in August 1864, by hiding him in her house and escorting him to the border of Congress Poland.
-Following the failed uprising, in December 1864, Mr. Orzeszko was arrested and sent to Russia.
-(Brykowisko, 2011).
+Her husband, on the other hand, had been critical of the uprising from its very beginning.
+He saw the uprising as untimely and highly unlikely to be successful.
+He would say that the movement would only bring about unnecessary death, suffering, and grave repercussions for the nation
+(Shastouski, Brykowisko, 2011).
 
+Following the failed uprising, in December 1864, Mr. Orzeszko was arrested and sent to Russia, his land and possessions confiscated.
+Deprived of her husband's estate, Eliza had no other choice than to return to her father's house in Milkowszczyzna.
 Eliza has thus described her impressions from returning to her hometown:
 
 \longquote{%
   I went out to the world in a carriage padded with blue damask and drawn by seven horses. I was accompanied by servants shining with coat of arms plaques\ldots{} At the age of twenty, I returned from those distant places all alone, to the house I have inherited from my father, only to find it looted by soldiers who had stayed in the household; [I had to pay] debts taken by other people and a tribute % kontrybucja
 so enormous that even [our] fields of wheat would bend under its burden; various officials would frequently visit and overstay\ldots{} The situation was completely overwhelming\ldots{}%
-\footnote{Orzeszkowa, 2000, pp. 7--8.}}
+\footnote{Shastouski, Orzeszkowa, 2000, pp. 7--8.}}
 
-Eliza debuted as a writer in 1866, with the novel \textit{Obrazek z lat głodowych} (`A Picture from the Years of Famine'), dealing with the daily struggles of the lower layers of society.
+Eliza was not the only one to suffer in the new reality.
+Following the failure of the January Uprising and the abolishment of serfdom in the Russian Empire, many families in the area of [the former Great Duchy of Lithuania] have become impoverished.
+The difficult situation gave Eliza the opportunity to watch the world from the point of view of the weak and destitute, which had been crucial for her literary career.
+In 1866, the young writer published her first novel, with the novel \textit{A Picture from the Years of Famine} (Polish: \textit{Obrazek z lat głodowych}), dealing with the daily struggles of the lower layers of society
+(Shastouski, Orzeszkowa, 2000, p. 8).
 
 In 1869, her marriage was annulled and she settled in Grodno (present day Hrodna, Belarus).
 Since 1879, she co-owned a publishing house and bookstore in Vilnius, in present-day Lithuania.
