--- a/_preamble.tex
+++ b/_preamble.tex
@@ -14,12 +14,12 @@
 \usepackage{csquotes}
 \definecolor{CompilationTime}{HTML}{aaaaaa}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
-\setmainfont[Mapping=tex-text]{Minion Pro}
-\setsansfont[Scale=0.88]{Minion Pro}
+\setmainfont[Mapping=tex-text]{Gentium Plus}
+\setsansfont[Scale=0.88]{Gentium Plus}
 \setCJKmainfont[Scale=0.89]{Noto Serif CJK TC}
 \setCJKsansfont{Noto Sans CJK TC}
 \setCJKmonofont{Noto Sans CJK TC}
-\newfontfamily\pyfont{Adobe Text Pro}
+\newfontfamily\pyfont{Doulos SIL}
 \newfontfamily\ipafont[Scale=0.95]{Doulos SIL}
 \newcommand{\toponim}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\nazwisko}[1]{\nohyphens{\pyfont #1}}
