Add more information about Eliza’s career

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -19,7 +19,7 @@
 \setCJKmainfont[Scale=0.89]{Noto Serif CJK TC}
 \setCJKsansfont{Noto Sans CJK TC}
 \setCJKmonofont{Noto Sans CJK TC}
-\newfontfamily\pyfont{Doulos SIL}
+\newfontfamily\pyfont{Gentium Plus}
 \newfontfamily\ipafont[Scale=0.95]{Doulos SIL}
 \newcommand{\toponim}[1]{\nohyphens{\pyfont #1}}
 \newcommand{\nazwisko}[1]{\nohyphens{\pyfont #1}}
