--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -8,7 +8,7 @@ Finally, the plot of the novel is outlined.
 In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
 Towards the end of the 18th century, the Polish-Lithuanian Commonwealth was in decline.
 Taking advantage of the weaknesses of the Polish state and military, three neighboring countries gradually annexed the territory of the Commonwealth.
-Three partitions of Poland have taken place, in 1772, 1793, and 1795, after which the Polish crown lost all territory to the Russian Empire, the Kingdom of Prussia, and the Austro-Hungarian Empire, and Poland ceased to exist as a country.
+Three partitions of Poland have taken place, in 1772, 1793, and 1795, after which the Polish crown lost all territory to the Russian Empire, the Kingdom of Prussia, and the Austro-Hungarian Empire. Poland ceased to exist as a country.
 After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism.
 These policies have been particularly strict in the Russian and Prussian partitions.
 
@@ -61,19 +61,41 @@ so enormous that even [our] fields of wheat would bend under its burden; various
 \footnote{Shastouski, Orzeszkowa, 2000, pp. 7--8.}}
 
 Eliza was not the only one to suffer in the new reality.
-Following the failure of the January Uprising and the abolishment of serfdom in the Russian Empire, many families in the area of [the former Great Duchy of Lithuania] have become impoverished.
-The difficult situation gave Eliza the opportunity to watch the world from the point of view of the weak and destitute, which had been crucial for her literary career.
-In 1866, the young writer published her first novel, with the novel \textit{A Picture from the Years of Famine} (Polish: \textit{Obrazek z lat głodowych}), dealing with the daily struggles of the lower layers of society
-(Shastouski, Orzeszkowa, 2000, p. 8).
+Following the failure of the January Uprising and the abolishment of serfdom in the Russian Empire, many families in Lithuania%
+\footnote{The name ``Lithuania'' at the time of Orzeszkowa was commonly used to refer to the territories of the former Great Duchy of Lithuania, encompassing a much greater area than today's Republic of Lithuania, and including parts of present-day Belarus and West Ukraine. These regions still remain in the Polish sphere of influence and have a substantial Polish minority, although the influence was diminished by decades of Soviet rule. Even so, Poles born before WW2 still refer to the cities of Lviv, Vilnius, and Hrodna as ``old Polish cities.''}
+have become impoverished.
+The difficult situation gave Eliza the opportunity to watch the world from the point of view of the weak and destitute, which would prove crucial for her literary career.
+In 1866, the young writer published her first short story under the title \textit{A Picture from the Years of Famine}%
+\footnote{Polish: \textit{Obrazek z lat głodowych}. The English title used in this thesis is the author's own translation.}, dealing with the daily struggles of the lower layers of society.
+The story was an early example of Orzeszkowa's realism, depicting impoverished peasants as innocent victims of a vicious, rotten feudal system.
+On the positive side, the story called for social progress for the benefit of the society as a whole, rather than just specific social classes or castes, a direction highly unusual for Polish literature in the period directly following the failed uprising
+(Shastouski, Orzeszkowa, 2000, pp. 8--11).
 
-In 1869, her marriage was annulled and she settled in Grodno (present day Hrodna, Belarus).
+During a period of roughly 10 years following
+%\textit{A Picture from the Years of Famine}
+her creative debut, Eliza's writing had been influenced by the emerging trend of Warsaw Positivism, full of optimism for the future of a society undergoing a capitalist transformation.
+The pivot of her creative works of this period had been educating the youth to adapt to the new bourgeois reality 
+(Orzeszkowa, 2000, p. 9).
+
+The optimistic view became somewhat dimmed when she realized that she herself, as a single woman, might struggle to make a livelihood after losing the main sources of her income, i. e. the estates of her husband and father, and would need to resort to the only jobs available to women, such as private language tutor or governess.
+At the time, the most attractive of all jobs deemed fit for women had been the job of a telegraphist.
+Even so, it soon became obvious that in Warsaw, under Russian rule, the position was out of reach of a Polish woman.
+Eliza considered a woman's lack of control over her own existence to be yet another remnant of the bygone feudal era.
+% Another aspect of a w
+She had experienced this feeling of impotence herself, when trying to apply for divorce.
+The ecclesiastic authorities would only approve her application after she agreed to pay a considerable amount of money.
+This bitter realization of a woman's impotence is emphasised in her works of \textit{Tendenzliteratur}, including the novel \textit{Marta}, analyzed in this thesis
+(Orzeszkowa, 2000, pp. 8--9).
+
+In 1869, Eliza's marriage was finally annulled.
+After selling her father's estate in Milkowszczyzna in 1970, she settled in Grodno (present-day Hrodna, Belarus).
 Since 1879, she co-owned a publishing house and bookstore in Vilnius, in present-day Lithuania.
 Her most important works included \textit{The Boor} (Polish: \textit{Cham}), \textit{The Dziurdzia Family} (Polish: \textit{Dziurdziowie}), and \textit{On the Banks of the Niemen} (Polish: \textit{Nad Niemnem}).
 Most of her works deal with the difficult existence of peasants, women, and impoverished gentry.
 Her works are often classified as \textit{Tendenzliteratur} (German: `tendentious literature').
 She had been nominated twice for the Nobel Prize in Literature.
 Eliza Orzeszkowa died in Grodno in 1910 and was buried at the local Catholic cemetery
-(Brykowisko 2011, Britannica).
+(Brykowisko, 2011, Britannica, Orzeszkowa, 2000, p. 10).
 
 \section{Names of Eliza Orzeszkowa}
 In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
