--- a/titlepage.tex
+++ b/titlepage.tex
@@ -21,7 +21,7 @@
     \vspace{0.5em}
     {\large Advisor: Dr. Lai Tzu-yun}\par
     \vspace{2cm}
-    {\large 中華民國一〇九年三月}\par
+    {\large 中華民國一〇九年十二月}\par
     \vspace{0.5em}
     {\large Taipei, \@date}
   \end{center}
