Stub chapter 4, more on Eliza’s career

--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -71,21 +71,27 @@ The story was an early example of Orzeszkowa's realism, depicting impoverished p
 On the positive side, the story called for social progress for the benefit of the society as a whole, rather than just specific social classes or castes, a direction highly unusual for Polish literature in the period directly following the failed uprising
 (Shastouski, Orzeszkowa, 2000, pp. 8--11).
 
-During a period of roughly 10 years following
-%\textit{A Picture from the Years of Famine}
-her creative debut, Eliza's writing had been influenced by the emerging trend of Warsaw Positivism, full of optimism for the future of a society undergoing a capitalist transformation.
+In other realist works, such as \textit{The Pompalinski Family} (Polish: \textit{Pompali\'nscy}), \textit{Mr. Graba} (Polish: \textit{Pan Graba}), or \textit{On the Bottom of Conscience} (Polish: \textit{Na dnie sumienia}%
+\footnote{All three titles translated from Polish by the author.}), Orzeszkowa makes a point of describing and ridiculing the most annoying aspects of the elites, depicting aristocrats as a parasitic, dull-witted folk.
+In \textit{Mr. Graba} and \textit{On the Bottom of Conscience}, she tells the stories of young people who have received traditional, aristocratic education, which proved useless once the material basis for their existence had disappeared---the protagonists had no other choice than to live a parasitic, opportunistic lifestyle
+(Orzeszkowa, 2000, p. 11).
+
+During a period of roughly 10 years following her creative debut, Eliza's writing had been influenced by the emerging trend of Warsaw Positivism, full of optimism for the future of a society undergoing a capitalist transformation.
 The pivot of her creative works of this period had been educating the youth to adapt to the new bourgeois reality 
+(Orzeszkowa, 2000, pp. 9).
+
+The optimistic outlooks became somewhat dimmed when she realized that she herself, as a single woman, might struggle to make a livelihood after losing the main sources of her income, i. e. the estates of her husband and father, and would need to resort to the only jobs available to women, such as private language tutor or governess.
+At the time, the most attractive of all jobs deemed fit for women had been the job of a telegraphist.
+Even so, it soon became obvious that in Warsaw, under Russian rule, even that position was out of reach of a Polish woman
 (Orzeszkowa, 2000, p. 9).
 
-The optimistic view became somewhat dimmed when she realized that she herself, as a single woman, might struggle to make a livelihood after losing the main sources of her income, i. e. the estates of her husband and father, and would need to resort to the only jobs available to women, such as private language tutor or governess.
-At the time, the most attractive of all jobs deemed fit for women had been the job of a telegraphist.
-Even so, it soon became obvious that in Warsaw, under Russian rule, the position was out of reach of a Polish woman.
 Eliza considered a woman's lack of control over her own existence to be yet another remnant of the bygone feudal era.
-% Another aspect of a w
-She had experienced this feeling of impotence herself, when trying to apply for divorce.
-The ecclesiastic authorities would only approve her application after she agreed to pay a considerable amount of money.
-This bitter realization of a woman's impotence is emphasised in her works of \textit{Tendenzliteratur}, including the novel \textit{Marta}, analyzed in this thesis
-(Orzeszkowa, 2000, pp. 8--9).
+She had experienced this feeling of impotence herself, when she tried to apply to the Church for a divorce.
+The Catholic Church, with its conservative views, was an important bastion of the feudal system, and used its arsenal of social manipulation techniques to protect the feudal privilege.
+For a long time, the ecclesiastic authorities were unwilling to grant a divorce request of a woman, and only granted her wish after she agreed to pay the Church a considerable amount of money.
+Following her divorce, she had been ostracized and ridiculed by the conservative members of the society.
+This bitter realization of a woman's impotence is emphasized in her works of \textit{Tendenzliteratur}, including the novel \textit{Marta}, analyzed in this thesis
+(Orzeszkowa, 2000, pp. 8--11).
 
 In 1869, Eliza's marriage was finally annulled.
 After selling her father's estate in Milkowszczyzna in 1970, she settled in Grodno (present-day Hrodna, Belarus).
@@ -116,7 +122,7 @@ These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshí
 The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
 The story is told from the point of view of a third-person omniscient narrator.
 
-\textit{Marta} tells the tragical story of a certain Marta Świcka.
+The novel \textit{Marta} tells the tragical story of a certain Marta Świcka.
 In the beginning of the novel, Marta is presented as an impoverished, twenty-odd-year-old lady whose affluent husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
 Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw to a plain, dilapidated, single room.
 
